# stripe-checkout-platform

./: .gitignore  README.md
.github/workflows/: backend-infrastructure.yml  backend-infratstructure.yml  deploy-backend-infratstructure.yml  run-lambda.yml
backend/api-lib/: .gitignore  README.md  api.py  pyproject.toml
backend/api-lib/scripts/: create-local-ssl.sh
backend/api-lib/src/api_lib/: __init__.py  main.py  oauth2.py  stripe.py  user.py  utils.py
backend/api-lib/src/api_lib/stripe/: __init__.py  _stripe.py  schemas.py  tables.py  utils.py
backend/infrastructure/: app.py  cdk.json
backend/infrastructure/infrastructure/: utils.py
backend/infrastructure/infrastructure/stacks/: cognito.py  ecr.py  fastapi_lambda.py
backend/infrastructure/tests/unit/: test_stacks.py  test_utils.py
backend/lambdas/sync-stripe/: README.md  entrypoint.py  pyproject.toml
backend/lambdas/sync-stripe/src/sync_stripe/: __init__.py  utils.py
frontend/app/: .dockerignore  .eslintrc.json  .gitignore  Dockerfile  package-lock.json  package.json
frontend/app/src/app/: contexts.tsx  globals.css  layout.tsx  loginButton.tsx  page.tsx
frontend/app/src/app/home/: page.tsx
frontend/infrastructure/infrastructure/: ecr.py
scripts/: backend_infrastructure.sh  backend_infrastructure_set_env.sh  backend_infrastructure_test.sh  initialize_backend_environment.sh  initialize_backend_print_variables.sh  initialize_backend_python_environment.sh  install_aws_cli.sh  run_lambda.sh  setup_api_lambda_zip.sh  setup_aws_environment_variables.sh  setup_lambda_zip.sh  setup_openid_connect.sh
(+10 files in other folders)
