[project]
name = "api-lib"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Chris Mamon", email = "chrisam1993@gmail.com" }
]
dependencies = [
    "fastapi>=0.111.0",
    "boto3>=1.34.139",
    "mypy-boto3>=1.34.139",
    "boto3-stubs[cognito-idp,dynamodb,ssm]>=1.34.139",
    "requests>=2.32.3",
    "python-jose[cryptography]>=3.3.0",
    "itsdangerous>=2.2.0",
    "stripe>=10.3.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.2.2",
    "pip>=24.1.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/api_lib"]
