[project]
name = "sync-stripe"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Chris Mamon", email = "chrisam1993@gmail.com" }
]
dependencies = [
    "boto3>=1.34.149",
    "boto3-stubs[dynamodb,ssm]>=1.34.149",
    "mypy>=1.11.0",
    "stripe>=10.5.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/sync_stripe"]
